--- a/admin/create_recommendations.html
+++ b/admin/create_recommendations.html
@@ -6,7 +6,7 @@
         <meta name="description" content="recommend places based on distance">
         <meta name="author" content="Isaac J. Lee, Jacque White">
 
-        <title>Make Recommendations</title>
+        <title>Create Recommendations</title>
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
@@ -17,10 +17,10 @@
     </head>
     <body>
         <div class="container">
-            <h1>Make Recommendations</h1>
+            <h1>Create Recommendations</h1>
             <p>Open Firebase to see the results.</p>
         </div>
         
-        <script type="text/javascript" src="assets/js/make_recommendations.js"></script>
+        <script type="text/javascript" src="assets/js/create_recommendations.js"></script>
     </body>
 </html>
