--- a/api_demos/authenticate_users.html
+++ b/api_demos/authenticate_users.html
@@ -46,6 +46,7 @@
         </style>
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     </head>
     <body>
         <div class="container">
@@ -65,12 +66,12 @@
                 
                 <div id="userEmail_container">
                     <label for="name">Email (required)</label>
-                    <input type="text" id="userEmail">
+                    <input type="email" id="userEmail">
                 </div>
                 
                 <div id="userPassword_container">
                     <label for="name">Password (required)</label>
-                    <input type="text" id="userPassword">
+                    <input type="password" id="userPassword">
                 </div>
 
                 <div id="messageToUser"></div>
