--- a/api_demos/make_recommendations_firebase.html
+++ b/api_demos/make_recommendations_firebase.html
@@ -18,8 +18,8 @@
 
             .menu_events {
                 float       : left;
-                width       : 28%;
-                margin-right: 5%;
+                width       : 22%;
+                margin-right: 3%;
             }
 
             li {
@@ -111,6 +111,15 @@
                         <li>Coffee</li>
                         <li>Tea</li>
                         <li>Wine</li>
+                    </ul>
+                </div>
+
+                <div class="menu_events">
+                    <h2>Location</h2>
+                    <ul id="location">
+                        <li>Central</li>
+                        <li>North</li>
+                        <li>South</li>
                     </ul>
                 </div>
             </div>
