added data validation for signup

--- a/api_demos/authenticate_users.html
+++ b/api_demos/authenticate_users.html
@@ -71,7 +71,7 @@
                 
                 <div id="userPassword_container">
                     <label for="name">Password (required)</label>
-                    <input type="password" id="userPassword">
+                    <input type="text" id="userPassword">
                 </div>
 
                 <div id="messageToUser"></div>
