--- a/api_demos/authenticate_users.html
+++ b/api_demos/authenticate_users.html
@@ -16,7 +16,6 @@
                 width : 50%;
                 margin: auto;
             }
-
             .button_top, .button_bottom {
                 font-family   : "Quicksand", sans-serif;
                 font-size     : 1.15em;
@@ -28,7 +27,6 @@
                 border        : 3px solid var(--color-dark-blue);
                 padding       : 4% 4.5%;
             }
-
             .button_top {
                 float           : left;
                 background-color: lightgray;
@@ -36,7 +34,6 @@
                 margin-right    : 1.5%;
                 margin-bottom   : 12.5%;
             }
-
             .button_bottom {
                 float           : right;
                 background-color: var(--color-light-blue);
@@ -71,7 +68,7 @@
                 
                 <div id="userPassword_container">
                     <label for="name">Password (required)</label>
-                    <input type="password" id="userPassword">
+                    <input type="text" id="userPassword">
                 </div>
 
                 <div id="messageToUser"></div>
