added location fields to html

--- a/api_demos/authenticate_users.html
+++ b/api_demos/authenticate_users.html
@@ -71,6 +71,11 @@
                     <input type="text" id="userPassword">
                 </div>
 
+                 <div id="userLocation_container">
+                    <label for="name">Preferred Location (North, Central, or South)</label>
+                    <input type="text" id="userLocation">
+                </div>
+
                 <div id="messageToUser"></div>
 
                 <div class="button_bottom" id="button_submit">Submit</div>
