--- a/admin/create_databases_nofirebase.html
+++ b/admin/create_databases_nofirebase.html
@@ -10,10 +10,9 @@
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style_api.css">
         <style>
-            /* IMPORTANT: Always set the map height explicitly to define the size
-             * of the div element that contains the map. */
+            /* IMPORTANT: Set the map height explicitly */
             #map {
                 height: 500px;
             }
@@ -86,6 +85,6 @@
         </div>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=createDatabases" async defer></script>
-        <script type="text/javascript" src="assets/js/create_databases.js"></script>
+        <script type="text/javascript" src="assets/js/create_databases_nofirebase.js"></script>
     </body>
 </html>
