--- a/admin/authenticate_users.html
+++ b/admin/authenticate_users.html
@@ -10,12 +10,13 @@
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style_api.css">
         <style>
             .panel {
                 width : 50%;
                 margin: auto;
             }
+
             .button_top, .button_bottom {
                 font-family   : "Quicksand", sans-serif;
                 font-size     : 1.15em;
@@ -27,6 +28,7 @@
                 border        : 3px solid var(--color-dark-blue);
                 padding       : 4% 4.5%;
             }
+
             .button_top {
                 float           : left;
                 background-color: lightgray;
@@ -34,6 +36,7 @@
                 margin-right    : 1.5%;
                 margin-bottom   : 12.5%;
             }
+            
             .button_bottom {
                 float           : right;
                 background-color: var(--color-light-blue);
