--- a/api_demos/google_maps.html
+++ b/api_demos/google_maps.html
@@ -10,10 +10,9 @@
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style_api.css">
         <style>
-            /* IMPORTANT: Always set the map height explicitly to define the size
-            * of the div element that contains the map. */
+            /* IMPORTANT: Set the map height explicitly */
             #map {
                 height: 500px;
             }
