--- a/admin/create_databases.html
+++ b/admin/create_databases.html
@@ -1,9 +1,10 @@
+<!-- Step 1: Create databases of events. -->
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="create brewery, trail, and bbq databases">
+        <meta name="description" content="create databases of events">
         <meta name="author" content="Isaac J. Lee, Jacque White">
 
         <title>Create Databases</title>
@@ -17,7 +18,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Create Databases</h1>
+            <h1>1. Create Databases</h1>
             <p>Open Firebase to see the results.</p>
 
             <div id="map" style="display: none"></div>
