--- a/admin/create_databases_nofirebase.html
+++ b/admin/create_databases_nofirebase.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="create brewery, trail, and bbq databases">
+        <meta name="description" content="create databases of events">
         <meta name="author" content="Isaac J. Lee, Jacque White">
 
         <title>Create Databases</title>
