--- a/admin/display_recommendations.html
+++ b/admin/display_recommendations.html
@@ -1,12 +1,13 @@
+<!-- Step 4: Display recommendations based on distance. -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="recommend places based on distance">
+        <meta name="description" content="display recommendations based on distance">
         <meta name="author" content="Isaac J. Lee, Jacque White">
 
-        <title>Make Recommendations</title>
+        <title>Display Recommendations</title>
 
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand|Shadows+Into+Light" rel="stylesheet">
@@ -78,7 +79,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Make Recommendations</h1>
+            <h1>4. Display Recommendations</h1>
             
             <div class="page clearfix" id="menu">
                 <div class="menu_events">
@@ -119,6 +120,8 @@
                     <ul id="location">
                         <li>Central</li>
                         <li>North</li>
+                        <li>West</li>
+                        <li>East</li>
                         <li>South</li>
                     </ul>
                 </div>
