--- a/admin/create_recommendations.html
+++ b/admin/create_recommendations.html
@@ -19,7 +19,7 @@
     <body>
         <div class="container">
             <h1>3. Create Recommendations</h1>
-            <p>Open Firebase to see the results.</p>
+            <p>Open Console to see the results.</p>
         </div>
         
         <script type="text/javascript" src="assets/js/create_recommendations.js"></script>
