--- a/admin/create_recommendations.html
+++ b/admin/create_recommendations.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>3. Create Recommendations</h1>
+            <h1>Create Recommendations</h1>
             <p>Open Console to see the results.</p>
         </div>
         
