--- a/admin/display_recommendations.html
+++ b/admin/display_recommendations.html
@@ -79,7 +79,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>4. Display Recommendations</h1>
+            <h1>Display Recommendations</h1>
             
             <div class="page clearfix" id="menu">
                 <div class="menu_events">
