--- a/admin/remove_duplicates.html
+++ b/admin/remove_duplicates.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>2. Remove Duplicates</h1>
+            <h1>Remove Duplicates</h1>
             <p>Open Console to see the results.</p>
         </div>
         <script type="text/javascript" src="assets/js/remove_duplicates.js"></script>
