--- a/admin/create_databases.html
+++ b/admin/create_databases.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>1. Create Databases</h1>
+            <h1>Create Databases</h1>
             <p>Open Firebase to see the results.</p>
 
             <div id="map" style="display: none"></div>
