--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         
         <!-- Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|Homemade+Apple|Kalam">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|Kalam">
         <link rel="stylesheet" href="assets/css/style.css">
 
         <!-- Firebase -->
