--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="content page" id="page2" style="display: none">
             <div class="row locall_flex_container">
                 <div class="btn-group col-md-4" id="events_eat">
-                    <button type="button" class="btn btn-secondary dropdown-toggle button_events" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eat</button>
+                    <button type="button" class="btn btn-secondary dropdown-toggle button_events" id="button_eat" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Eat</button>
                     <div class="dropdown-menu dropdown-menu-right locall_menu_events">
                         <button class="dropdown-item" type="button">Asian</button>
                         <button class="dropdown-item" type="button">BBQ</button>
@@ -189,7 +189,7 @@
                 </div>
 
                 <div class="btn-group col-md-4" id="events_play">
-                    <button type="button" class="btn btn-secondary dropdown-toggle button_events" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</button>
+                    <button type="button" class="btn btn-secondary dropdown-toggle button_events" id="button_play" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Play</button>
                     <div class="dropdown-menu dropdown-menu-right locall_menu_events">
                         <button class="dropdown-item" type="button">Bowl</button>
                         <button class="dropdown-item" type="button">Hike</button>
@@ -200,7 +200,7 @@
                 </div>
 
                 <div class="btn-group col-md-4" id="events_drink">
-                    <button type="button" class="btn btn-secondary dropdown-toggle button_events" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drink</button>
+                    <button type="button" class="btn btn-secondary dropdown-toggle button_events" id="button_drink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drink</button>
                     <div class="dropdown-menu dropdown-menu-right locall_menu_events">
                         <button class="dropdown-item" type="button">Bar</button>
                         <button class="dropdown-item" type="button">Brewery</button>
@@ -213,7 +213,22 @@
 
             <!-- TODO: Combine with back-end -->
             <div class="containerPage2">
-                <div class="subContainer">
+                <div class="panel" id="recommendations">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Metric</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+
+                <div id="map"></div>
+            </div>
+        </div>
+                <!--
                     <div class="listItem">
                         <div>
                             <img src="https://s3-media1.fl.yelpcdn.com/bphoto/KNXhThgKWO36YfVP3UJREQ/300s.jpg" height="100">
@@ -246,13 +261,8 @@
                             <p>512-555-5555</p>
                             <p>restaurantwebsite@website.com</p>
                         </div>  
-                    </div>  
-                </div>
-                
-                <!-- TODO: Replace with Google Maps -->
-                <div class="item item-2"><img src=http://staticmapmaker.com/img/google.png></div> 
-            </div>
-        </div>
+                    </div>
+                -->
 
         
         <!-- Your Dev Team Page -->
@@ -299,5 +309,6 @@
     </body>
 
     <!-- Custom JavaScript -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
     <script src="assets/js/app.js"></script>
 </html>
