--- a/index.html
+++ b/index.html
@@ -232,16 +232,7 @@
 
             <!-- TODO: Combine with back-end -->
             <div class="containerPage2">
-                <div class="panel" id="recommendations">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Metric</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+                <div id="recommendations">
                 </div>
 
                 <div id="map"></div>
@@ -325,9 +316,10 @@
                 </div>
             </div>
         </div>
-    </body>
 
-    <!-- Custom JavaScript -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
-    <script src="assets/js/app.js"></script>
+        <!-- Custom JavaScript -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
+        <script src="assets/js/app.js"></script>
+
+    </body>
 </html>
