--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
             <!-- TODO: Combine with back-end -->
             <div class="containerPage2">
-                <div class="panel" id="recommendations">
+                <div class="panel" id="recommendations" style="color:azure">
                     <table>
                         <thead>
                             <tr>
