added set timeout for after signing up and thank you message

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <input type="text" id="userPassword_login">
                 </div>
 
-                <div id="messageToUser"></div>
+                <div class="messageToUser"></div>
 
                 <div class="btn btn-primary" id="button_login">Submit</div>
 
@@ -213,7 +213,7 @@
                     <input type="text" id="userPassword_signup">
                 </div>
 
-               <div id="messageToUser"></div>
+               <div class="messageToUser"></div>
 
                <div class="btn btn-primary" id="button_signup">Submit</div>
             </div>
