--- a/index.html
+++ b/index.html
@@ -120,22 +120,8 @@
 
             <!-- TODO: Combine with back-end -->
             <div class="containerPage2">
-<<<<<<< HEAD
-                <div class="panel" id="recommendations" style="color:azure">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
-=======
-                <div id="recommendations">
->>>>>>> 05abc6ab90ee1fd08c001e96b59574aa80cf4990
+                <div id="recommendations" class="subContainer">
                 </div>
-
                 <div id="map"></div>
             </div>
         </div>
