--- a/index.html
+++ b/index.html
@@ -120,13 +120,9 @@
 
             <!-- TODO: Combine with back-end -->
             <div class="containerPage2">
-<<<<<<< HEAD
-                <div id="recommendations" class="subContainer">
-=======
-                <div id="recommendations" style="color:azure">
->>>>>>> 4cd63931f1acffca9d7e43a496949106bfb87236
+                <div id="recommendations">
                 </div>
-                <div id="map"></div>
+                <div id="map" style="display:none"></div>
             </div>
         </div>
         
