--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
 
             <!-- TODO: Combine with back-end -->
             <div class="containerPage2">
-                <div id="recommendations">
-                </div>
-                <div id="map" style="display:none"></div>
+                <div id="recommendations"></div>
+                <div id="map"></div>
             </div>
         </div>
         
