--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         
         <!-- Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|Kalam">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo|Kalam">
         <link rel="stylesheet" href="assets/css/style.css">
         <style>
             /* IMPORTANT: Set the map height explicitly */
@@ -44,11 +44,10 @@
                 <div class="bg-dark p-4">
                     <!-- Added data-toggle and data-target to specify an action -->
                     <div class="locall_menuItems">
-                        <!-- TODO: Remove the inline onClick function -->
                         <button type="button" class="btn btn-outline-primary"   onClick="displayPage(1)" data-toggle="collapse" data-target=".collapse">Home</button>
                         <button type="button" class="btn btn-outline-warning"   onClick="displayPage(2)" data-toggle="collapse" data-target=".collapse">Go Local!</button>
                         <button type="button" class="btn btn-outline-secondary" onClick="displayPage(3)" data-toggle="collapse" data-target=".collapse">Your Dev Team</button>
-                        <button type="button" class="btn btn-outline-success" onClick="displayPage(4)" data-toggle="collapse" data-target=".collapse">Log In / Sign Up</button>
+                        <button type="button" class="btn btn-outline-success"   onClick="displayPage(4)" data-toggle="collapse" data-target=".collapse">Log In / Sign Up</button>
                     </div>
                 </div>
             </div>
