--- a/admin/authenticate_users.html
+++ b/admin/authenticate_users.html
@@ -76,8 +76,14 @@
                 </div>
 
                  <div class="input_container" id="userLocation_container">
-                    <label for="userLocation">Location (Central, North, West, East, South)</label>
-                    <input type="text" id="userLocation">
+                    <label for="userLocation">Location</label>
+                    <select name="userLocation" id="userLocation">
+                        <option value="central" selected>Central Austin</option>
+                        <option value="north">North Austin</option>
+                        <option value="west">West Austin</option>
+                        <option value="east">East Austin</option>
+                        <option value="south">South Austin</option>
+                    </select>
                 </div>
 
                 <div id="messageToUser"></div>
