--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <!-- Custom CSS -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo|Kalam">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
         <!-- Firebase -->
         <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
