--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
                 </div>
             </div>
 
-            <!-- TODO: Combine with back-end -->
             <div class="containerPage2">
                 <div id="recommendations"></div>
-                <!-- in order for the map to show I had to place a inline style display block -->
-                <div id="map" style="display:block"></div>
+                <!-- In-line CSS to display Google Maps -->
+                <div id="map_container">
+                    <div id="map"></div>
+                </div>
             </div>
         </div>
         
