--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 
             <div class="containerPage2">
                 <div id="recommendations"></div>
-                <!-- In-line CSS to display Google Maps -->
-                <div id="map_container">
+                <div>
                     <div id="map"></div>
                 </div>
             </div>
