--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="containerPage2">
                 <div id="recommendations"></div>
                 <div>
-                    <div id="map"></div>
+                    <div id="map" style="display: block"></div>
                 </div>
             </div>
         </div>
