--- a/admin/display_recommendations.html
+++ b/admin/display_recommendations.html
@@ -151,7 +151,7 @@
                         <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>Metric</th>
+                                <th>Rating</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
