add removing unecessary js

--- a/devTeam.html
+++ b/devTeam.html
@@ -50,7 +50,7 @@
                 </button>
             </nav>
         </div>
-        <div class="page locall_page_full disappear" id="page3">
+        <div class="page locall_page_full" id="page3">
             <h1>Your Dev Team</h1>
             
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
