--- a/about_us.html
+++ b/about_us.html
@@ -23,7 +23,7 @@
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         
         <!-- Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo|Kalam">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
         <!-- Firebase -->
@@ -37,9 +37,9 @@
                     <!-- Added data-toggle and data-target to specify an action -->
                     <div class="locall_menuItems">
                         <a class="btn btn-primary" href="index.html">Home</a>
-                        <a class="btn btn-warning" href="eat_drink_play.html">Go Local!</a>
-                        <a class="btn btn-secondary" href="devTeam.html" >Your Dev Team</a>
-                        <a class="btn btn-success" href="signIn.html">Log In / Sign Up</a>
+                        <a class="btn btn-warning" href="go_local.html">Go Local!</a>
+                        <a class="btn btn-secondary" href="about_us.html">Your Dev Team</a>
+                        <a class="btn btn-success" href="login.html">Log In / Sign Up</a>
                     </div>
                 </div>
             </div>
@@ -50,6 +50,7 @@
                 </button>
             </nav>
         </div>
+
         <div class="page locall_page_full" id="page3">
             <h1>Your Dev Team</h1>
             
@@ -77,7 +78,7 @@
                         <h2>Aaron Tyler</h2>
                         <h3>Front-End Developer</h3>
 
-                        <p>I'm a biochemistry student at The University of Texas at Austin. I enjoy both front-end and back-end development.</p>
+                        <p>I'm a biochemistry student at The University of Texas at Austin.<br>I enjoy both front-end and back-end development.</p>
                     </div>
 
                     <div class="carousel-item">
@@ -85,16 +86,13 @@
                         <h2>Margarita Tagaban</h2>
                         <h3>Front-End Developer</h3>
 
-                        <p>Hi, I'm Margie! I'm a Texas native who loves problem solving. 
-                            <br>
-                            I earned my Bachelor's Degree July 2017 at Texas State University.
-                        </p>
+                        <p>Hi, I'm Margie! I'm a Texas native who loves problem solving.<br>I earned my Bachelor's Degree July 2017 at Texas State University.</p>
                     </div>
                 </div>
             </div>
         </div>
-                <!-- Custom JavaScript -->
-                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
-                <script src="assets/js/app.js"></script>
-            </body>
-        </html>
+
+        <!-- Custom JavaScript -->
+        <script src="assets/js/app.js"></script>
+    </body>
+</html>
