--- a/go_local.html
+++ b/go_local.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -23,7 +24,7 @@
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         
         <!-- Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo|Kalam">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
         <!-- Firebase -->
@@ -37,9 +38,9 @@
                     <!-- Added data-toggle and data-target to specify an action -->
                     <div class="locall_menuItems">
                         <a class="btn btn-primary" href="index.html">Home</a>
-                        <a class="btn btn-warning" href="eat_drink_play.html">Go Local!</a>
-                        <a class="btn btn-secondary" href="devTeam.html" >Your Dev Team</a>
-                        <a class="btn btn-success" href="signIn.html">Log In / Sign Up</a>
+                        <a class="btn btn-warning" href="go_local.html">Go Local!</a>
+                        <a class="btn btn-secondary" href="about_us.html">Your Dev Team</a>
+                        <a class="btn btn-success" href="login.html">Log In / Sign Up</a>
                     </div>
                 </div>
             </div>
@@ -102,10 +103,11 @@
             <div class="containerPage2">
                 <div id="recommendations"></div>
                 <div>
-                    <div id="map"  ></div>
+                    <div id="map"></div>
                 </div>
             </div>
         </div>
+        
         <!-- Custom JavaScript -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
         <script src="assets/js/app.js"></script>
