--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <div class="bg-dark p-4">
                     <!-- Added data-toggle and data-target to specify an action -->
                     <div class="locall_menuItems">
-                        <a class="btn btn-primary" href="">Home</a>
-                        <a class="btn btn-warning" href="eat_drink_play.html">Go Local!</a>
-                        <a class="btn btn-secondary" href="devTeam.html" >Your Dev Team</a>
-                        <a class="btn btn-success" href="signIn.html">Log In / Sign Up</a>
+                        <a class="btn btn-primary" href="index.html">Home</a>
+                        <a class="btn btn-warning" href="go_local.html">Go Local!</a>
+                        <a class="btn btn-secondary" href="about_us.html">Your Dev Team</a>
+                        <a class="btn btn-success" href="login.html">Log In / Sign Up</a>
                     </div>
                 </div>
             </div>
@@ -50,18 +50,18 @@
                 </button>
             </nav>
         </div>
+
         <!-- Cover Page -->
         <div class="page locall_page_full" id="page1">
             <div class="jumbotron">
                 <h1>LocALL</h1>
                 <h2>Eat, Play, Drink Locally</h2>
 
-                <a class="btn btn-primary" href="eat_drink_play.html">Go Local!</a>
+                <a class="btn btn-primary" href="go_local.html">Go Local!</a>
             </div>
         </div>
 
         <!-- Custom JavaScript -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
         <script src="assets/js/app.js"></script>
     </body>
 </html>
