--- a/signUp.html
+++ b/signUp.html
@@ -23,7 +23,7 @@
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         
         <!-- Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo|Kalam">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
         <!-- Firebase -->
@@ -37,9 +37,9 @@
                     <!-- Added data-toggle and data-target to specify an action -->
                     <div class="locall_menuItems">
                         <a class="btn btn-primary" href="index.html">Home</a>
-                        <a class="btn btn-warning" href="eat_drink_play.html">Go Local!</a>
-                        <a class="btn btn-secondary" href="devTeam.html" >Your Dev Team</a>
-                        <a class="btn btn-success" href="signIn.html">Log In / Sign Up</a>
+                        <a class="btn btn-warning" href="go_local.html">Go Local!</a>
+                        <a class="btn btn-secondary" href="about_us.html">Your Dev Team</a>
+                        <a class="btn btn-success" href="login.html">Log In / Sign Up</a>
                     </div>
                 </div>
             </div>
@@ -50,6 +50,7 @@
                 </button>
             </nav>
         </div>
+        
         <div class="page locall_page_full disappear" id="page5">
             <div class="containerPage5">
                 <h2>Sign Up</h2>
@@ -76,7 +77,6 @@
         </div>
 
         <!-- Custom JavaScript -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5UBuB1NoQsps2oc6EdyNhrLGbYY_FZMQ&libraries=places&callback=displayMap" async defer></script>
         <script src="assets/js/app.js"></script>
     </body>
 </html>
