--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
                 <div class="btn btn-primary" id="button_login">Submit</div>
 
                 <p>Want to create an account?</p>
-                <a class="btn btn-primary" href="signUp.html">Sign Up</a>
+                <a class="btn btn-primary" href="signup.html">Sign Up</a>
             </div>
         </div>
 
