--- a/admin/create_recommendations_nofirebase.html
+++ b/admin/create_recommendations_nofirebase.html
@@ -68,7 +68,7 @@
             <h1>Create Recommendations</h1>
             
             <h2>Results</h2>
-            <p>Click on a table row to see the places on map.</p>
+            <p>Click on a row to see places on the map.</p>
 
             <div class="page">
                 <div class="panel" id="recommendations">
