--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="find local places to eat, play, and drink in Austin">
+        <meta name="description" content="find local places to eat, play, and drink">
         <meta name="author" content="Isaac J. Lee, Margie Tagaban, Aaron Tyler, Jacque White">
         
         <title>LocALL</title>
@@ -56,13 +56,7 @@
             <div class="jumbotron">
                 <h1>LocALL</h1>
                 <h2>Eat, Play, Drink Locally</h2>
-                 <h4> 
-                    A web application were you'll be able to plan a full day of fun. 
-                    <br>
-                    Avoid having to travel clear across ATX to dine, drink, or play.
-                    <br> 
-                    <span style="color:#9A00B6;font-size:1.7em" >Use LocAll</span>.
-                </h4>
+                
                 <a class="btn btn-primary" href="go_local.html">Go Local!</a>
             </div>
         </div>
